y.output
   0  $accept : program $end

   1  program : exp

   2  exp : lvalue
   3      | NIL
   4      | INT
   5      | STRING
   6      | BREAK
   7      | MINUS exp
   8      | LPAREN expseq RPAREN
   9      | IF exp THEN exp ELSE exp
  10      | IF exp THEN exp
  11      | WHILE exp DO exp
  12      | FOR ID ASSIGN exp TO exp DO exp
  13      | LET decs IN expseq END
  14      | ID LBRACK exp RBRACK OF exp
  15      | ID LBRACE rec RBRACE
  16      | ID LPAREN params RPAREN
  17      | exp PLUS exp
  18      | exp MINUS exp
  19      | exp TIMES exp
  20      | exp DIVIDE exp
  21      | exp EQ exp
  22      | exp NEQ exp
  23      | exp LT exp
  24      | exp LE exp
  25      | exp GT exp
  26      | exp GE exp
  27      | exp AND exp
  28      | exp OR exp
  29      | lvalue ASSIGN exp

  30  rec :
  31      | recs

  32  recs : ID EQ exp
  33       | ID EQ exp COMMA recs

  34  expseq : exp SEMICOLON exps
  35         |
  36         | exp

  37  exps : exp
  38       | exp SEMICOLON exps

  39  params :
  40         | param

  41  param : exp
  42        | exp COMMA param

  43  decs :
  44       | dec decs

  45  dec : tydecs
  46      | vardec
  47      | fundecs

  48  tydecs : tydec
  49         | tydec tydecs

  50  tydec : TYPE ID EQ ty

  51  ty : ID
  52     | LBRACE tyfields RBRACE
  53     | ARRAY OF ID

  54  tyfields :
  55           | tyfield

  56  tyfield : ID COLON ID
  57          | ID COLON ID COMMA tyfield

  58  vardec : VAR ID ASSIGN exp
  59         | VAR ID COLON ID ASSIGN exp

  60  fundecs : fundec
  61          | fundec fundecs

  62  fundec : FUNCTION ID LPAREN tyfields RPAREN EQ exp
  63         | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

  64  lvalue : ID
  65         | lvalue DOT ID
  66         | lvalue LBRACK exp RBRACK
  67         | ID LBRACK exp RBRACK

state 0
	$accept : . program $end  (0)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	program  goto 12
	exp  goto 13
	lvalue  goto 14


1: shift/reduce conflict (shift 16, reduce 64) on LBRACK
state 1
	exp : ID . LBRACK exp RBRACK OF exp  (14)
	exp : ID . LBRACE rec RBRACE  (15)
	exp : ID . LPAREN params RPAREN  (16)
	lvalue : ID .  (64)
	lvalue : ID . LBRACK exp RBRACK  (67)

	LPAREN  shift 15
	LBRACK  shift 16
	LBRACE  shift 17
	$end  reduce 64
	COMMA  reduce 64
	SEMICOLON  reduce 64
	RPAREN  reduce 64
	RBRACK  reduce 64
	RBRACE  reduce 64
	DOT  reduce 64
	PLUS  reduce 64
	MINUS  reduce 64
	TIMES  reduce 64
	DIVIDE  reduce 64
	EQ  reduce 64
	NEQ  reduce 64
	LT  reduce 64
	LE  reduce 64
	GT  reduce 64
	GE  reduce 64
	AND  reduce 64
	OR  reduce 64
	ASSIGN  reduce 64
	THEN  reduce 64
	ELSE  reduce 64
	TO  reduce 64
	DO  reduce 64
	IN  reduce 64
	END  reduce 64
	FUNCTION  reduce 64
	VAR  reduce 64
	TYPE  reduce 64


state 2
	exp : STRING .  (5)

	.  reduce 5


state 3
	exp : INT .  (4)

	.  reduce 4


state 4
	exp : LPAREN . expseq RPAREN  (8)
	expseq : .  (35)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	RPAREN  reduce 35

	exp  goto 18
	lvalue  goto 14
	expseq  goto 19


state 5
	exp : MINUS . exp  (7)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 20
	lvalue  goto 14


state 6
	exp : IF . exp THEN exp ELSE exp  (9)
	exp : IF . exp THEN exp  (10)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 21
	lvalue  goto 14


state 7
	exp : WHILE . exp DO exp  (11)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 22
	lvalue  goto 14


state 8
	exp : FOR . ID ASSIGN exp TO exp DO exp  (12)

	ID  shift 23
	.  error


state 9
	exp : LET . decs IN expseq END  (13)
	decs : .  (43)

	FUNCTION  shift 24
	VAR  shift 25
	TYPE  shift 26
	IN  reduce 43

	dec  goto 27
	tydecs  goto 28
	fundecs  goto 29
	vardec  goto 30
	decs  goto 31
	tydec  goto 32
	fundec  goto 33


state 10
	exp : BREAK .  (6)

	.  reduce 6


state 11
	exp : NIL .  (3)

	.  reduce 3


state 12
	$accept : program . $end  (0)

	$end  accept


state 13
	program : exp .  (1)
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)

	PLUS  shift 34
	MINUS  shift 35
	TIMES  shift 36
	DIVIDE  shift 37
	EQ  shift 38
	NEQ  shift 39
	LT  shift 40
	LE  shift 41
	GT  shift 42
	GE  shift 43
	AND  shift 44
	OR  shift 45
	$end  reduce 1


state 14
	exp : lvalue .  (2)
	exp : lvalue . ASSIGN exp  (29)
	lvalue : lvalue . DOT ID  (65)
	lvalue : lvalue . LBRACK exp RBRACK  (66)

	LBRACK  shift 46
	DOT  shift 47
	ASSIGN  shift 48
	$end  reduce 2
	COMMA  reduce 2
	SEMICOLON  reduce 2
	RPAREN  reduce 2
	RBRACK  reduce 2
	RBRACE  reduce 2
	PLUS  reduce 2
	MINUS  reduce 2
	TIMES  reduce 2
	DIVIDE  reduce 2
	EQ  reduce 2
	NEQ  reduce 2
	LT  reduce 2
	LE  reduce 2
	GT  reduce 2
	GE  reduce 2
	AND  reduce 2
	OR  reduce 2
	THEN  reduce 2
	ELSE  reduce 2
	TO  reduce 2
	DO  reduce 2
	IN  reduce 2
	END  reduce 2
	FUNCTION  reduce 2
	VAR  reduce 2
	TYPE  reduce 2


state 15
	exp : ID LPAREN . params RPAREN  (16)
	params : .  (39)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	RPAREN  reduce 39

	exp  goto 49
	lvalue  goto 14
	params  goto 50
	param  goto 51


state 16
	exp : ID LBRACK . exp RBRACK OF exp  (14)
	lvalue : ID LBRACK . exp RBRACK  (67)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 52
	lvalue  goto 14


state 17
	exp : ID LBRACE . rec RBRACE  (15)
	rec : .  (30)

	ID  shift 53
	RBRACE  reduce 30

	rec  goto 54
	recs  goto 55


state 18
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)
	expseq : exp . SEMICOLON exps  (34)
	expseq : exp .  (36)

	SEMICOLON  shift 56
	PLUS  shift 34
	MINUS  shift 35
	TIMES  shift 36
	DIVIDE  shift 37
	EQ  shift 38
	NEQ  shift 39
	LT  shift 40
	LE  shift 41
	GT  shift 42
	GE  shift 43
	AND  shift 44
	OR  shift 45
	RPAREN  reduce 36
	END  reduce 36


state 19
	exp : LPAREN expseq . RPAREN  (8)

	RPAREN  shift 57
	.  error


state 20
	exp : MINUS exp .  (7)
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)

	.  reduce 7


state 21
	exp : IF exp . THEN exp ELSE exp  (9)
	exp : IF exp . THEN exp  (10)
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)

	PLUS  shift 34
	MINUS  shift 35
	TIMES  shift 36
	DIVIDE  shift 37
	EQ  shift 38
	NEQ  shift 39
	LT  shift 40
	LE  shift 41
	GT  shift 42
	GE  shift 43
	AND  shift 44
	OR  shift 45
	THEN  shift 58
	.  error


state 22
	exp : WHILE exp . DO exp  (11)
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)

	PLUS  shift 34
	MINUS  shift 35
	TIMES  shift 36
	DIVIDE  shift 37
	EQ  shift 38
	NEQ  shift 39
	LT  shift 40
	LE  shift 41
	GT  shift 42
	GE  shift 43
	AND  shift 44
	OR  shift 45
	DO  shift 59
	.  error


state 23
	exp : FOR ID . ASSIGN exp TO exp DO exp  (12)

	ASSIGN  shift 60
	.  error


state 24
	fundec : FUNCTION . ID LPAREN tyfields RPAREN EQ exp  (62)
	fundec : FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp  (63)

	ID  shift 61
	.  error


state 25
	vardec : VAR . ID ASSIGN exp  (58)
	vardec : VAR . ID COLON ID ASSIGN exp  (59)

	ID  shift 62
	.  error


state 26
	tydec : TYPE . ID EQ ty  (50)

	ID  shift 63
	.  error


state 27
	decs : dec . decs  (44)
	decs : .  (43)

	FUNCTION  shift 24
	VAR  shift 25
	TYPE  shift 26
	IN  reduce 43

	dec  goto 27
	tydecs  goto 28
	fundecs  goto 29
	vardec  goto 30
	decs  goto 64
	tydec  goto 32
	fundec  goto 33


state 28
	dec : tydecs .  (45)

	.  reduce 45


state 29
	dec : fundecs .  (47)

	.  reduce 47


state 30
	dec : vardec .  (46)

	.  reduce 46


state 31
	exp : LET decs . IN expseq END  (13)

	IN  shift 65
	.  error


32: shift/reduce conflict (shift 26, reduce 48) on TYPE
state 32
	tydecs : tydec .  (48)
	tydecs : tydec . tydecs  (49)

	TYPE  shift 26
	IN  reduce 48
	FUNCTION  reduce 48
	VAR  reduce 48

	tydecs  goto 66
	tydec  goto 32


33: shift/reduce conflict (shift 24, reduce 60) on FUNCTION
state 33
	fundecs : fundec .  (60)
	fundecs : fundec . fundecs  (61)

	FUNCTION  shift 24
	IN  reduce 60
	VAR  reduce 60
	TYPE  reduce 60

	fundecs  goto 67
	fundec  goto 33


state 34
	exp : exp PLUS . exp  (17)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 68
	lvalue  goto 14


state 35
	exp : exp MINUS . exp  (18)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 69
	lvalue  goto 14


state 36
	exp : exp TIMES . exp  (19)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 70
	lvalue  goto 14


state 37
	exp : exp DIVIDE . exp  (20)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 71
	lvalue  goto 14


state 38
	exp : exp EQ . exp  (21)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 72
	lvalue  goto 14


state 39
	exp : exp NEQ . exp  (22)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 73
	lvalue  goto 14


state 40
	exp : exp LT . exp  (23)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 74
	lvalue  goto 14


state 41
	exp : exp LE . exp  (24)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 75
	lvalue  goto 14


state 42
	exp : exp GT . exp  (25)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 76
	lvalue  goto 14


state 43
	exp : exp GE . exp  (26)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 77
	lvalue  goto 14


state 44
	exp : exp AND . exp  (27)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 78
	lvalue  goto 14


state 45
	exp : exp OR . exp  (28)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 79
	lvalue  goto 14


state 46
	lvalue : lvalue LBRACK . exp RBRACK  (66)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 80
	lvalue  goto 14


state 47
	lvalue : lvalue DOT . ID  (65)

	ID  shift 81
	.  error


state 48
	exp : lvalue ASSIGN . exp  (29)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 82
	lvalue  goto 14


state 49
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)
	param : exp .  (41)
	param : exp . COMMA param  (42)

	COMMA  shift 83
	PLUS  shift 34
	MINUS  shift 35
	TIMES  shift 36
	DIVIDE  shift 37
	EQ  shift 38
	NEQ  shift 39
	LT  shift 40
	LE  shift 41
	GT  shift 42
	GE  shift 43
	AND  shift 44
	OR  shift 45
	RPAREN  reduce 41


state 50
	exp : ID LPAREN params . RPAREN  (16)

	RPAREN  shift 84
	.  error


state 51
	params : param .  (40)

	.  reduce 40


state 52
	exp : ID LBRACK exp . RBRACK OF exp  (14)
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)
	lvalue : ID LBRACK exp . RBRACK  (67)

	RBRACK  shift 85
	PLUS  shift 34
	MINUS  shift 35
	TIMES  shift 36
	DIVIDE  shift 37
	EQ  shift 38
	NEQ  shift 39
	LT  shift 40
	LE  shift 41
	GT  shift 42
	GE  shift 43
	AND  shift 44
	OR  shift 45
	.  error


state 53
	recs : ID . EQ exp  (32)
	recs : ID . EQ exp COMMA recs  (33)

	EQ  shift 86
	.  error


state 54
	exp : ID LBRACE rec . RBRACE  (15)

	RBRACE  shift 87
	.  error


state 55
	rec : recs .  (31)

	.  reduce 31


state 56
	expseq : exp SEMICOLON . exps  (34)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 88
	lvalue  goto 14
	exps  goto 89


state 57
	exp : LPAREN expseq RPAREN .  (8)

	.  reduce 8


state 58
	exp : IF exp THEN . exp ELSE exp  (9)
	exp : IF exp THEN . exp  (10)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 90
	lvalue  goto 14


state 59
	exp : WHILE exp DO . exp  (11)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 91
	lvalue  goto 14


state 60
	exp : FOR ID ASSIGN . exp TO exp DO exp  (12)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 92
	lvalue  goto 14


state 61
	fundec : FUNCTION ID . LPAREN tyfields RPAREN EQ exp  (62)
	fundec : FUNCTION ID . LPAREN tyfields RPAREN COLON ID EQ exp  (63)

	LPAREN  shift 93
	.  error


state 62
	vardec : VAR ID . ASSIGN exp  (58)
	vardec : VAR ID . COLON ID ASSIGN exp  (59)

	COLON  shift 94
	ASSIGN  shift 95
	.  error


state 63
	tydec : TYPE ID . EQ ty  (50)

	EQ  shift 96
	.  error


state 64
	decs : dec decs .  (44)

	.  reduce 44


state 65
	exp : LET decs IN . expseq END  (13)
	expseq : .  (35)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	END  reduce 35

	exp  goto 18
	lvalue  goto 14
	expseq  goto 97


state 66
	tydecs : tydec tydecs .  (49)

	.  reduce 49


state 67
	fundecs : fundec fundecs .  (61)

	.  reduce 61


state 68
	exp : exp . PLUS exp  (17)
	exp : exp PLUS exp .  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)

	TIMES  shift 36
	DIVIDE  shift 37
	$end  reduce 17
	COMMA  reduce 17
	SEMICOLON  reduce 17
	RPAREN  reduce 17
	RBRACK  reduce 17
	RBRACE  reduce 17
	PLUS  reduce 17
	MINUS  reduce 17
	EQ  reduce 17
	NEQ  reduce 17
	LT  reduce 17
	LE  reduce 17
	GT  reduce 17
	GE  reduce 17
	AND  reduce 17
	OR  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	TO  reduce 17
	DO  reduce 17
	IN  reduce 17
	END  reduce 17
	FUNCTION  reduce 17
	VAR  reduce 17
	TYPE  reduce 17


state 69
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp MINUS exp .  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)

	TIMES  shift 36
	DIVIDE  shift 37
	$end  reduce 18
	COMMA  reduce 18
	SEMICOLON  reduce 18
	RPAREN  reduce 18
	RBRACK  reduce 18
	RBRACE  reduce 18
	PLUS  reduce 18
	MINUS  reduce 18
	EQ  reduce 18
	NEQ  reduce 18
	LT  reduce 18
	LE  reduce 18
	GT  reduce 18
	GE  reduce 18
	AND  reduce 18
	OR  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	TO  reduce 18
	DO  reduce 18
	IN  reduce 18
	END  reduce 18
	FUNCTION  reduce 18
	VAR  reduce 18
	TYPE  reduce 18


state 70
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp TIMES exp .  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)

	.  reduce 19


state 71
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp DIVIDE exp .  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)

	.  reduce 20


state 72
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp EQ exp .  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)

	PLUS  shift 34
	MINUS  shift 35
	TIMES  shift 36
	DIVIDE  shift 37
	$end  reduce 21
	COMMA  reduce 21
	SEMICOLON  reduce 21
	RPAREN  reduce 21
	RBRACK  reduce 21
	RBRACE  reduce 21
	AND  reduce 21
	OR  reduce 21
	THEN  reduce 21
	ELSE  reduce 21
	TO  reduce 21
	DO  reduce 21
	IN  reduce 21
	END  reduce 21
	FUNCTION  reduce 21
	VAR  reduce 21
	TYPE  reduce 21


state 73
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp NEQ exp .  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)

	PLUS  shift 34
	MINUS  shift 35
	TIMES  shift 36
	DIVIDE  shift 37
	$end  reduce 22
	COMMA  reduce 22
	SEMICOLON  reduce 22
	RPAREN  reduce 22
	RBRACK  reduce 22
	RBRACE  reduce 22
	AND  reduce 22
	OR  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	TO  reduce 22
	DO  reduce 22
	IN  reduce 22
	END  reduce 22
	FUNCTION  reduce 22
	VAR  reduce 22
	TYPE  reduce 22


state 74
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp LT exp .  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)

	PLUS  shift 34
	MINUS  shift 35
	TIMES  shift 36
	DIVIDE  shift 37
	$end  reduce 23
	COMMA  reduce 23
	SEMICOLON  reduce 23
	RPAREN  reduce 23
	RBRACK  reduce 23
	RBRACE  reduce 23
	AND  reduce 23
	OR  reduce 23
	THEN  reduce 23
	ELSE  reduce 23
	TO  reduce 23
	DO  reduce 23
	IN  reduce 23
	END  reduce 23
	FUNCTION  reduce 23
	VAR  reduce 23
	TYPE  reduce 23


state 75
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp LE exp .  (24)
	exp : exp . GT exp  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)

	PLUS  shift 34
	MINUS  shift 35
	TIMES  shift 36
	DIVIDE  shift 37
	$end  reduce 24
	COMMA  reduce 24
	SEMICOLON  reduce 24
	RPAREN  reduce 24
	RBRACK  reduce 24
	RBRACE  reduce 24
	AND  reduce 24
	OR  reduce 24
	THEN  reduce 24
	ELSE  reduce 24
	TO  reduce 24
	DO  reduce 24
	IN  reduce 24
	END  reduce 24
	FUNCTION  reduce 24
	VAR  reduce 24
	TYPE  reduce 24


state 76
	exp : exp . PLUS exp  (17)
	exp : exp . MINUS exp  (18)
	exp : exp . TIMES exp  (19)
	exp : exp . DIVIDE exp  (20)
	exp : exp . EQ exp  (21)
	exp : exp . NEQ exp  (22)
	exp : exp . LT exp  (23)
	exp : exp . LE exp  (24)
	exp : exp . GT exp  (25)
	exp : exp GT exp .  (25)
	exp : exp . GE exp  (26)
	exp : exp . AND exp  (27)
	exp : exp . OR exp  (28)

	PLUS  shift 34
	MINUS  shift 35
	TIMES  shift 36
	DIVIDE  shift 37
	$end  reduce 25
	COMMA  reduce 25
	SEMICOLON  reduce 25
	RPAREN  reduce 25
	RBRACK  reduce 25
	RBRACE  reduce 25
	AND  reduce 25
	OR  reduce 25
	THEN  reduce 25
	ELSE  reduce 25
	TO  reduce 25
	DO  reduce 25
	IN  reduce 25
	END  reduce 25
	FUNCTION  reduce 25
	VAR  reduce 25
	TYPE  reduce 25

